k8s/testlab/solar-system/deployment-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: oauth2-proxy
  name: oauth2-proxy
  namespace: solar
spec:
  selector:
    matchLabels:
      run: oauth2-proxy
  template:
    metadata:
      labels:
        run: oauth2-proxy
      namespace: solar
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy
          imagePullPolicy: IfNotPresent
          args:
            - --provider=""OpenID Connect"
            - --provider-display-name="Authelia"
            - --client-id="oauth2-proxy"
            - --client-secret="proxy"
            - --redirect-url="/oauth2/callback"
            - --oidc-issuer-url="http://authelia.authelia-test/api/oidc/authorization"
            - --cookie-secure=false
            - --cookie-secret="secretsecretse"
            - --cookie-expire=24h
            - --set-xauthrequest=true
            - --email-domain="*"
          ports:
            - containerPort: 4180
              protocol: TCP
