k8s/testlab/solar-system/svc-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    run: oauth2-proxy
