k8s/testlab/solar-system/ingress-caddy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: solar
  annotations:
    kubernetes.io/ingress.class: caddy
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer-staging"
spec:
  ingressClassName: caddy
  tls:
    - secretName: solar-system-authelia-tls
      hosts:
        - auth.emisia.net
        - public.emisia.net
        - admin.emisia.net
        - secure.emisia.net
        - singlefactor.emisia.net
  rules:
    - host: public.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: admin.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
    - host: secure.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: singlefactor.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
