k8s/testlab/solar-system/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: solar-system-authelia
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/auth-url: "http://authelia-service.authelia.svc.cluster.local/api/verify"
  #   nginx.ingress.kubernetes.io/auth-signin: "https://public.emisia.net/"
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer-staging"
  #   kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: solar-system-authelia-tls
      hosts:
        - public.emisia.net
        - admin.emisia.net
        - secure.emisia.net
        - singlefactor.emisia.net
  rules:
    - host: public.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: admin.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
    - host: secure.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: singlefactor.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
