k8s/testlab/solar-system/ingress-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: solar
  annotations:
    ingress.kubernetes.io/oauth: oauth2_proxy    
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer-staging"
spec:
  ingressClassName: haproxy
  tls:
    - secretName: solar-system-authelia-tls
      hosts:
        - public.emisia.net
        - admin.emisia.net
        - secure.emisia.net
        - singlefactor.emisia.net
  rules:
    - host: public.emisia.net
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: admin.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
    - host: secure.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: singlefactor.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
