k8s/testlab/solar-system/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-ingress
  namespace: solar-system-authelia
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "http://authelia-service.authelia.svc.cluster.local/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://whoami.emisia.net/"
    ingress.cilium.io/force-https: "true"
    cert-manager.io/cluster-issuer: "cloudflare-cluster-issuer-staging"
    io.cilium/lb-ipam-ips: 192.168.50.225
spec:
  ingressClassName: nginx
  tls:
    - secretName: test-app-tls
      hosts:
        - public.emisia.net
        - admin.emisia.net
        - secure.emisia.net
        - singlefactor.emisia.net
  rules:
    - host: public.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: admin.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
    - host: secure.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: sun
                port: 
                  number: 80
            pathType: Prefix
    - host: singlefactor.emisia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: moon
                port: 
                  number: 80
            pathType: Prefix
